static/css/wfl.css
/* ... */
.advance {
	position:absolute;
	top:48%;
	background-color:#EFEFEF;
	z-index: 100;
	height:90px;
	width:40px;
	cursor: pointer;
}
#right_advance {
	right:0;
	background: #efefef url(/static/images/wfl/icon_arrow_right.png) no-repeat center center;
	display: none;
}
#left_advance {
	left:0;
	background: #efefef url(/static/images/wfl/icon_arrow_left.png) no-repeat center center;
	display: none;
}
a.advance:hover{
    background-color:#FFF !important;
    display: none;
}
#site_info {
	position:absolute;
	right:16px;
	bottom:16px;
	z-index: 100;
	color: #fff;
    font-style: italic;
    font-family: Arial, Helvetica, sans-serif;
	font-size:12px;
	line-height: 12px;
}
#site_info img {
	padding-left: 5px;
	margin-bottom:-4px;
}
#site_info a{
    color: #FFF;
}
#site_info a:hover{
    color:#000;
    background-color:#FF0;
/*    padding:3px;*/
}
#top_nav {
	height:34px;
	background-color:#EFEFEF;
	position: absolute;
	width:100%;
	top:0;
	left:0;
	z-index: 100;
	border-bottom:1px solid black;
}
h1, .nav_slide, #nav_map{
	background-color:#EFEFEF;
	border-right:1px solid #989898;
	border-left: 1px solid white;
	padding-top:6px;
	height:28px;
	float:left;
	text-align:center;
	
}
#nav_map { 
	z-index: 1000;
	font-family: "proxima-nova-condensed-1","proxima-nova-condensed-2", Helvetica, sans-serif;
	font-weight: regular;
	font-style: italic;
    /*width:50px;*/
	padding-left: 15px;
	padding-right: 15px;
    color:#666;
    text-decoration:none;
    display: none;
}
h1 {
	/*text-transform: uppercase;*/
	letter-spacing: .5px;
	padding-left:15px;
	padding-right:15px;
	background-color:black;
	color: #efefef;
	font-weight:bold;
	font-style: italic;
	font-family: "proxima-nova-condensed-1","proxima-nova-condensed-2", Helvetica, sans-serif;
}
/*Google text*/
h1 span {
/*    text-shadow: rgb(0, 0, 0) 0px 1px 0px;*/
}
.nav_slide {
	width:37px;
	background-color:#EFEFEF;
	text-decoration:none;
	color:#000;
	z-index: 1000;
	font-weight:bold;
	font-style: italic;
    display: none; 
}
a.nav_slide:hover, a#nav_map:hover {
	background-color:#FFF;
}
.nav_selected {
	background-color:#ccc !important;
	color: #333 !important;
	border-left: 1px solid #ccc !important;
	font-weight: 300 !important;
}
#slide_thumbnail {
	position:absolute;
	background-color:#FFF;
	z-index: 98;
}
#slide_thumbnail img{
    margin:6px 6px 0px 6px;
}
#slide_thumbnail span {
    position:absolute;
    background-color:#FFF;
	font-size: 16px;
	line-height: 18px;
    bottom:18px;
    left:18px;
    padding: 6px 8px 3px 6px;
    max-width:172px;
	font-weight: bold;
	font-style: italic;
    text-transform: uppercase;
}
#slide_holder {
	position:absolute;
	top:34px;
	left:0px;
	overflow:hidden;
	display: none;
}
.slide {
    background-color:#000;
	overflow:hidden;
	float:left;
	position:relative;
}
.slide_text_container {
	z-index: 1000;
	position:absolute;
	left:53px;
	bottom:90px;
}
.slide_title, .slide_deck {
}
.slide_title {
	float:left;
	max-width:815px;
	font-size:60px;
	font-weight:bold;
	font-style: italic;
	line-height:60px;
	text-transform: uppercase;
	padding:15px 25px 3px 15px;
	background-color: #fff;
	color: #000;
}
.slide_deck, .slide_ask {
	float:left;
	background-color: #000;
	color: #FFF;
	max-width:815px;
	font-size:18px;
	font-style: italic;
	padding:8px 20px 8px 20px;
	clear:left;
	font-family: "proxima-nova-condensed-1","proxima-nova-condensed-2", Helvetica, sans-serif;

}
.slide_ask {
	background-color:#FCEE21;
	color:#000;
	cursor: pointer;
	text-decoration:none;
	/*text-transform: uppercase;*/
	font-weight:bold;
	clear:none;
}
a.slide_ask:hover{
    background-color:#FFF !important;
}
#slide_image_control{
    
}

/* LIGHTBOX STYLES */
/* ---------------------------------------------------- */

.box-container {
	width: 780px;
	height:auto;
	padding: 0px;
	margin:0 20px;
	background-color: white;
	color: black;
}
.box-head {
	padding:0px;
	height: auto;
	border-bottom: 1px solid #e6e6e6;
}
.box-head h3 {
	padding: 20px 0px 10px 40px;
	float: left;
	font-family: "pill-gothic-300mg-1", "pill-gothic-300mg-2", Helvetica, sans-serif;
	font-size:48px;
	font-style:italic;
	font-weight:bold;
	text-transform: uppercase;
}
.box-head .close {
	padding: 10px 10px 0px 0px;
	float: right;
}
.box-container .media-column, .box-container .content-column {
	display:inline;
	float:left;
	position:relative;
	height: 100%;
}
.media-column {
	width: 280px;
	margin: 0px 20px 0px 40px;
	padding: 30px 0;
}
.content-column {
	width: 379px;
	margin: 0px 40px 0px 0px;
	padding: 30px 0px 30px 20px;
	border-left: 1px solid #e6e6e6;
}
.box-container p {
	font-family: Helvetica, Arial, sans-serif;
}
.media-column p {
	margin: 10px 0px 30px 0px;
	padding: 0px;
	font-size: 12px;
	line-height: 16px;
}
.media-column a:link, .media-column a:visited {
	color: black;
	text-decoration: underline;
}
.media-column a:hover {
	color: #666;
}
.media-column .media-label {
	font-style: italic;
	font-weight: bold;
}

.content-column h4 {
	font-size: 21px;
	margin-bottom: 0px;
	font-style: italic;
	font-weight: bold;
}
.content-column p {
	margin: 15px 0px 15px 0px;
	padding: 0px;
	font-size: 14px;
	line-height: 21px;
}
.content-column .intro {
	margin: 0px 0px 15px 0px;
	/*font-size: 16px;
	line-height: 22px;
	font-style:italic;
	font-weight: regular;*/
}
.content-column a:link, .content-column a:visited {
	color: rgb(28, 148, 196);
	text-decoration: underline;
}
.content-column a:hover {
	color: black;
}
.clear {
	clear:both;
	display:block;
	overflow:hidden;
	visibility:hidden;
	width:0;
	height:0
}
.clearfix:after {
	clear:both;
	content:' ';
	display:block;
	font-size:0;
	line-height:0;
	visibility:hidden;
	width:0;
	height:0
}
* html .clearfix, *:first-child+html .clearfix {
	zoom:1
}

